add and remove child done
