# model/group.js
@@ -6,6 +6,7 @@ const { roles } = require('../constants')
 const message = require('./message')
 const post = require('./post')
 const user = require('./user')
+const child = require("./child");
 
 const group = module.exports = {
     doesGroupExists: groupId => new Promise(async (resolve, reject) => {
@@ -32,6 +33,18 @@ const group = module.exports = {
         }
     }),
 
+    isChildInGroup: (groupId, childId) => new Promise(async (resolve, reject) => {
+        try {
+            const children = await query(`SELECT *
+                                        FROM childInGroup
+                                        WHERE groupId = ? AND childId = ?`, [groupId, childId])
+
+            resolve(children.length > 0)
+        } catch (error) {
+            reject(error)
+        }
+    }),
+
     getGroupById: groupId => new Promise(async (resolve, reject) => {
         try {
             const groups = await query('SELECT * FROM `group` WHERE id = ?', [groupId])
@@ -46,7 +59,8 @@ const group = module.exports = {
                 messages: await message.getMessages(group.threadId),
                 posts: await post.getPostsByGroupId(group.id),
                 teachers: await user.getUsersInGroupByRole(group.id, roles.teacher),
-                parents: await user.getUsersInGroupByRole(group.id, roles.parent)
+                parents: await user.getUsersInGroupByRole(group.id, roles.parent),
+                children: await child.getChildrenFromGroup(group.id)
             }
 
             resolve(fullGroup)
@@ -81,5 +95,36 @@ const group = module.exports = {
         } catch (error) {
             reject(error)
         }
-    })
+    }),
+    addChild: (groupId, childId) => new Promise(async (resolve, reject) => {
+        try {
+
+            if (!(await group.doesGroupExists(groupId))) return reject(responses.notFound())
+            if (!(await child.doesChildExists(childId))) return reject(responses.notFound())
+            if (await group.isChildInGroup(groupId, childId)) return resolve()
+
+            await query(`INSERT INTO childInGroup (groupId, childId) VALUES (?, ?)`, [groupId, childId])
+
+            resolve()
+
+        } catch (error) {
+            reject(error)
+        }
+    }),
+
+    removeChild: (groupId, childId) => new Promise(async (resolve, reject) => {
+        try {
+
+            if (!(await group.doesGroupExists(groupId))) return reject(responses.notFound())
+            if (!(await child.doesChildExists(childId))) return reject(responses.notFound())
+            if (!(await group.isChildInGroup(groupId, childId))) return reject(responses.notFound())
+
+            await query(`DELETE FROM childInGroup WHERE groupId = ? AND childId = ?`, [groupId, childId])
+
+            resolve()
+
+        } catch (error) {
+            reject(error)
+        }
+    }),
 }
